# GeoSpatialSciProgrammingProject

./: .gitignore  README.md  pyproject.toml
data/: enschede_road_network.gpkg
src/: plots.py  run_analysis.py
src/project/: administrative.py  api.py  cycle_friendly.ipynb  cycle_friendly.py  data_manipulation.py  io.py  main.py  main_.py  metrics.py
tests/: test_main.py  test_metrics.py
